# drf_advanced_token_manager

./: MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
drf_advanced_token_manager/: urls.py  views.py
drf_advanced_token_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
drf_advanced_token_manager/templates/: drf_token_management_base.html  drf_token_management_view_token.html
