[metadata]
name = django_app_permissions_access_request
version = 0.0.1
description = Control and request access
long_description = file: README.rst
url = https://github.com/amp89/drf_advanced_token_manager
author = Alex Peterson
license_file = LICENSE

[options]
include_package_data = true
packages = find:

